# presales

./: .env.example  .gitignore  CONTEXT.md  HLD.md  INTERFACE.md  LLD.md  PRE-REVIEW-S1.md  PRE-REVIEW.md  README.md  SPRINT-STATUS.md  SPRINTS.md  WARDEN-REVIEW-S0.md  WARDEN-REVIEW-S1.5-S5.md  WARDEN-REVIEW-S1.md  WARDEN-REVIEW-S6.md  WARDEN-REVIEW-S7.md  WARDEN-REVIEW-S8.md  docker-compose.yml  patch.py  state.json
ai-service/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
ai-service/routers/: collateral.py  intake.py  jobs.py
ai-service/schemas/: agents.py  case_study.py  collateral.py  gates.py  intake.py  job.py  proposal.py
ai-service/workers/: case_study.py  collateral_detector.py  context_manager.py  diffgen.py  dispatcher.py  intake_parser.py  narrative.py  packaging.py  research.py  scorer.py  sow_maker.py  stub_worker.py  technical.py
backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/: 0001_initial.sql
backend/src/: app.ts  index.ts
backend/src/adapters/: factory.ts
backend/src/config/: env.ts  redis.ts  storage.ts
backend/src/jobs/: gate-reminder.scheduler.ts  queues.ts
backend/src/lib/: jwt.ts  prisma.ts
backend/src/middleware/: auth.middleware.ts  engagement-access.ts  error.middleware.ts  rbac.middleware.ts  upload.middleware.ts
backend/src/routes/: admin.routes.ts  artifact.routes.ts  auth.routes.ts  (+11 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: dev-start.sh
(+43 files in other folders)
