[tool.poetry]
name = "presales-ai-service"
version = "0.1.0"
description = "Python AI service for Presales Orchestrator — handles all LLM agent logic"
authors = ["Webknot Technologies"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.27.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
openai = "^1.54.0"
anthropic = "^0.37.0"
google-generativeai = "^0.8.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.30.0"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
